# PhotoDigiArt-ML

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apollo7/: __init__.py  __main__.py  app.py
apollo7/animation/: __init__.py  animator.py  lfo.py
apollo7/api/: __init__.py  enrichment.py  models.py
apollo7/collection/: __init__.py  analyzer.py  embedding_cloud.py
apollo7/config/: __init__.py  settings.py
apollo7/discovery/: __init__.py  dimensional.py  history.py  random_walk.py
apollo7/extraction/: __init__.py  base.py  cache.py  clip.py  clip_tokenizer.py  color.py  depth.py  edges.py  pipeline.py
apollo7/gui/: __init__.py  main_window.py  theme.py
apollo7/ingestion/: __init__.py  loader.py  metadata.py  thumbnailer.py
models/: README.md
tests/: conftest.py  test_animation.py  test_clip_extractor.py  test_collection_analyzer.py  test_color_extractor.py  test_crossfade_engine.py  test_depth_extractor.py  test_discovery.py  test_edge_extractor.py  test_enrichment.py  test_export.py  test_feature_viewer.py  test_flow_field.py  test_gpu_providers.py  test_loader.py  test_mapping.py  test_pbf_solver.py  test_pointcloud_generator.py  test_postfx.py  test_postfx_panel.py  test_preset_interpolation.py  test_presets.py  test_project_save_load.py  test_sim_lifecycle.py  test_sim_panel.py  test_simulation_engine.py  test_simulation_params.py  test_sph.py  test_thumbnailer.py  test_undo_redo.py  test_visual_quality.py
(+156 files in other folders)
